<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rr.deal.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:alpha="0.55"
        android:text="@string/medium"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_hint_text"

        android:alpha="0.55"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/btn"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sml"
        android:id="@+id/textView2"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button

        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/button2"

        android:textColor="@color/white"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_action_nameddd"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="23dp" />

    <Button

        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn3"

        android:id="@+id/button3"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/smll"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />


</RelativeLayout>
